tests/gcc-torture/breakdown/fail/eval/20040705-1.c
#include "cerberus.h"
/* { dg-require-effective-target int32plus } */

#define FIELDS1 long long l;
